testdata/baselines/reference/submodule/conformance/jsDeclarationsNonIdentifierInferredNames.errors.txt
jsDeclarationsNonIdentifierInferredNames.jsx(2,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.


==== jsDeclarationsNonIdentifierInferredNames.jsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    import * as React from "react";
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    const dynPropName = "data-dyn";
    export const ExampleFunctionalComponent = ({ "data-testid": dataTestId, [dynPropName]: dynProp }) => (
        <>Hello</>
    );